@@ -10,6 +10,7 @@ Changelog
   Add form and Edit form are now consistent.
   Remove kss.
   Notify user by many ways when a rule is not assigned anywhere yet.
+  We can assign a rule on whole site by a simple click.
   Added tests.
   [vsomogyi, thomasdesvenain,
    based on nvangheem specifications, contribution wimbou]
